Further tweaks to prevent line wrap on cols

--- a/docs/css/master.css
+++ b/docs/css/master.css
@@ -77,21 +77,20 @@ img {
     font-size: 22px; }
   .exp__title {
     letter-spacing: 2px; }
-  .exp__header > div > h4 {
-    font-size: 12px;
-    line-height: 16px; }
-  .exp__header > div > h5, .exp__header > h5 {
+  .exp__header > div > h4,
+  .exp__header > div > h5,
+  .exp__header > div > h6,
+  .exp__header > h5 {
     font-size: 12px;
     line-height: 16px; }
   .exp__header > h5 {
     margin-bottom: 12px; }
   .exp__header > div > h6 {
-    font-size: 12px;
-    line-height: 16px;
     margin-bottom: 4px; }
   .exp__header--list {
+    font-size: 12px;
     line-height: 18px;
-    font-size: 12px; }
+    padding-right: 15px; }
   .exp__hr {
     width: 85%;
     margin-top: 10px;
